cmake_minimum_required(VERSION 2.6)

MACRO(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
      LIST(APPEND dirlist ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
ENDMACRO()

MACRO(IGNORELIST result)
    SET(dirlist "")
    LIST(APPEND dirlist ".git")
    LIST(APPEND dirlist ".idea")
    LIST(APPEND dirlist "cmake-build-debug")
    SET(${result} ${dirlist})
ENDMACRO()

MACRO(EXIST dir is_exist)
    #message("${is_exist}")
    FOREACH(IGN ${IGN_LIST})
        IF(${dir} MATCHES ${IGN})
            SET(${is_exist} TRUE)
        ENDIF()
    ENDFOREACH()
ENDMACRO()

SET(CURRENT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
IGNORELIST(IGN_LIST)
SUBDIRLIST(SUBDIRS ${CURRENT_DIR})

FOREACH(subdir ${SUBDIRS})
    SET(is_exist FALSE)
    EXIST(${subdir} is_exist)
    message("${subdir}")
    IF(${is_exist} MATCHES FALSE)
        ADD_SUBDIRECTORY(${subdir})
    ENDIF()
ENDFOREACH()
